--- a/src/components/CustomButton/style.css
+++ b/src/components/CustomButton/style.css
@@ -1,14 +1,12 @@
 .btn {
   border: none;
   border-radius: 90px;
-  padding: 23px 30px;
-  font-family: Verdana, Tahoma, sans-serif;
-  font-size: 11px;
+  font-size: 12px;
   text-transform: uppercase;
   font-weight: bold;
   color: #fff;
   background-image: linear-gradient(to right, #49b3f7, #864ff1);
 }
 .btn:hover {
-  opacity: 0.9;
+  transform: scale(1.1);
 }
