--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin: 10px;
+  padding: 10px 30px;
 }
 .header_top {
   display: flex;
