--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Gotham_Pro_medium";
+  color: #243976;
+}
+#root {
+    width: 85%;
+    max-width: 1280px;
+    margin: 0 auto;;
 }
 
 code {
