--- a/src/pages/home/Components/Conditions/style.css
+++ b/src/pages/home/Components/Conditions/style.css
@@ -3,21 +3,31 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 30px;
+  gap: 50px;
+  margin-bottom: 40px;
+  padding: 15px 0 40px 0;
+  margin-bottom: 20px;
+  margin-top: 60px;
 }
 .conditions__content_one {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 100px;
+  gap: 30px;
+  margin-bottom: 30px;
 }
 .conditions__content_title {
+  font-family: "Gotham_Pro_medium";
   text-align: center;
   font-size: 35px;
+  margin-bottom: 20px;
 }
 .conditions__content_points {
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
+  margin-bottom: 40px;
+  padding: 10px;
 }
 .condition_item {
   flex: 1 1;
@@ -32,29 +42,11 @@
   height: 70px;
 }
 .condition_item span {
+  font-family: "Gotham_Pro_medium";
   font-size: 15px;
   line-height: 150%;
   text-align: center;
   width: 75%;
-}
-.promo {
-  padding: 10px 20px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  background-color: #eff2fd;
-  border-radius: 30px;
-}
-.promo_position {
-  position: relative;
-}
-.promo_img {
-  position: absolute;
-  top: -70px;
-  left: 25px;
-}
-.promo_text {
-  width: 50%;
 }
 
 .conditions__content_two {
@@ -62,9 +54,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 30px;
 }
 .conditions__content_aspect_item {
   display: flex;
+  align-items: baseline;
   gap: 10px;
 }
 .conditions__content_aspect_item img {
@@ -76,12 +70,13 @@
   gap: 5px;
 }
 .conditions__content_aspect_item_1 h4 {
+  font-family: "Gotham_Pro_medium";
   font-size: 20px;
   line-height: 103%;
 }
 .conditions__content_aspect_item_1 span {
   font-size: 15px;
-  line-height: 150%;
+  line-height: 120%;
 }
 .conditions__content_text {
   display: flex;
