--- a/src/components/CustomButton/style.css
+++ b/src/components/CustomButton/style.css
@@ -1,9 +1,10 @@
 .btn {
+  font-family: 'Gotham_Pro_medium';
+  letter-spacing: 1px;
   border: none;
   border-radius: 90px;
   font-size: 12px;
   text-transform: uppercase;
-  font-weight: bold;
   color: #fff;
   background-image: linear-gradient(to right, #49b3f7, #864ff1);
 }
