--- a/src/pages/home/Components/Main/Main.css
+++ b/src/pages/home/Components/Main/Main.css
@@ -1,8 +1,14 @@
 .main__content {
+  background-image: url("./../../../../shared/Images/background.png");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 90%;
+}
+.main_container {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
-  padding: 30px;
+  padding: 25px;
 }
 .main__content_info {
   display: flex;
@@ -18,8 +24,12 @@
   flex-direction: column;
   gap: 35px;
 }
+.main__content_base h4 {
+  font-family: Gotham_Pro_medium;
+}
 .main__content_title {
-  font-size: 55px;
+  font-family: 'Gotham_Pro_bold';
+  font-size: 58px;
   color: #243976;
 }
 .main__content_title span {
@@ -29,4 +39,3 @@
   font-size: 17px;
   font-weight: normal;
 }
-
