--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,11 @@
-
 .head_container {
   display: flex;
   flex-direction: column;
   gap: 30px;
   padding: 10px 30px;
+}
+.logo {
+  cursor: pointer;
 }
 .header_top {
   display: flex;
@@ -17,7 +19,7 @@
   gap: 29px;
 }
 .header_info span {
-  font-family: 'Gotham_Pro_medium';
+  font-family: "Gotham_Pro_medium";
   font-size: 20px;
   font-weight: bold;
   color: #243976;
@@ -37,7 +39,7 @@
 
 .header__list li,
 .header_acc span {
-  font-family: 'Gotham_Pro_medium';
+  font-family: "Gotham_Pro_medium";
   cursor: pointer;
   font-size: 14px;
   font-weight: bold;
