--- a/src/components/Promo/style.css
+++ b/src/components/Promo/style.css
@@ -1,5 +1,5 @@
 .main__content {
-  background-image: url("./../../../../shared/Images/background.png");
+  background-image: url("../../shared/Images/background.png");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
