--- a/src/pages/Components/Programma/style.css
+++ b/src/pages/Components/Programma/style.css
@@ -1,6 +1,7 @@
 .prog {
   padding: 40px 0;
 }
+
 .prog_content {
   padding-bottom: 20px;
 }
@@ -18,6 +19,13 @@
 .prog__class_item {
   display: flex;
   gap: 10px;
+}
+.prog__bg {
+  margin: 0 auto;
+  width: 95%;
+  background-color: #EFF2FD;
+  border-radius: 59px;
+  padding: 30px 20px;
 }
 .prog_content_top {
   display: flex;
