--- a/src/components/CustomButton/style.css
+++ b/src/components/CustomButton/style.css
@@ -7,6 +7,7 @@
   text-transform: uppercase;
   color: #fff;
   background-image: linear-gradient(to right, #49b3f7, #864ff1);
+  cursor: pointer;
 }
 .btn:hover {
   transform: scale(1.1);
