--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -50,6 +50,10 @@
   display: flex;
   gap: 8px;
 }
+.footer_soc_list li,
+.footer__info_license span {
+  cursor: pointer;
+}
 
 .footer_soc_list {
   display: flex;
@@ -66,7 +70,6 @@
 .footer__info_phone {
   display: flex;
   align-items: center;
-  
 }
 .footer__info_place span {
   width: 60%;
