--- a/src/pages/home/Components/Benefits/Benefits.css
+++ b/src/pages/home/Components/Benefits/Benefits.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   gap: 30px;
   padding: 40px;
+  margin-top: 35px;
 }
 .benefits__title {
   text-align: center;
@@ -27,7 +28,7 @@
   height: 160px;
 }
 .benefits_item h4 {
-    text-align: center;
+  text-align: center;
 }
 .benefits_item p {
   text-align: center;
