--- a/src/components/CustomBtnInfo/style.css
+++ b/src/components/CustomBtnInfo/style.css
@@ -15,3 +15,12 @@
 .custom_info_img:hover {
   transform: scale(1.1);
 }
+@media (max-width: 910px) {
+  .custom_btn_info {
+    gap: 5px;
+  }
+  .custom_btn_info button {
+    width: 240px;
+    height: 50px;
+  }
+}
