--- a/src/components/CustomPromo/CustomPromo.css
+++ b/src/components/CustomPromo/CustomPromo.css
@@ -25,3 +25,16 @@
   font-size: 16px;
   width: 50%;
 }
+
+@media (max-width: 1050px) {
+  .promo_img {
+    left: 5px;
+  }
+  .promo_text h3 {
+    font-size: 25px;
+  }
+  .promo_text span {
+    display: inline-block;
+    width: 90%;
+  }
+}
