--- a/src/pages/home/Components/Advantage/Advantage.css
+++ b/src/pages/home/Components/Advantage/Advantage.css
@@ -2,43 +2,70 @@
   background-color: #eff2fd;
 }
 .advantage_container {
-    padding: 60px 0 60px 0;
-    margin-bottom: 20px;
+  padding: 60px 0 60px 0;
+  margin-bottom: 20px;
 }
-.advantage_container h3 {
-margin-bottom: 20px;
+.advantage_content h3 {
+  margin-bottom: 20px;
 }
 .advantage_content {
-    display: flex;
-    padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
 }
 .advantage_content_left {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 60%;
 }
 .advantage_content_left_item {
-    display: flex;
-    align-items: center;
-    gap: 20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  cursor: pointer;
 }
 .active {
-    background-color: #fff;
+  background-color: #fff;
+  border-radius: 30px;
+  max-width: 80%;
+  padding: 4px 20px;
 }
 .active h4 {
-    color:aqua;
+  font-family: "Gotham_Pro_bold";
+  font-size: 58px;
+  background: linear-gradient(90deg, #864ff1, #49b3f7);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
 }
 .advantage_content_left_text {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 60%;
-
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 60%;
 }
 .advantage_content_left_text h4 {
-    font-size: 20px;
+  font-size: 20px;
 }
 .advantage_content_left_text p {
-    font-size: 15px;
-    line-height: 130%;
+  font-size: 15px;
+  line-height: 130%;
+}
+.advantage_content_right_img {
+  width: 90%;
+}
+
+@media (max-width: 1000px) {
+  .advantage_content_left {
+    gap: 12px;
+  }
+  .advantage_content h3 {
+    margin-bottom: 5px;
+  }
+  .advantage_content_left_text {
+    width: 95%;
+  }
 }
