--- a/src/pages/home/Components/Comparison/Comparison.css
+++ b/src/pages/home/Components/Comparison/Comparison.css
@@ -11,8 +11,7 @@
 .comparison__content {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  justify-content: center;
   gap: 10px;
 }
 
@@ -29,7 +28,7 @@
 }
 .comparison__content_online {
   background: linear-gradient(to right, #4271df, #789cf1);
-  color:#fff;
+  color: #fff;
 }
 .comparison__content_text h3 {
   font-size: 20px;
@@ -42,4 +41,30 @@
   gap: 15px;
   padding: 20px 15px;
 }
+.comprassion__img_item {
+display: block;
+}
 
+@media (max-width: 1300px) {
+.comprassion__img_item  {
+  width: 20%;
+}
+
+}
+@media (max-width: 1011px) {
+.comparison{
+  position: relative;
+}
+.comprassion__img_item  {
+  position: absolute;
+}
+.comprassion__img_left {
+  top:28px;
+  left:11px;
+}
+.comprassion__img_right {
+  bottom:-12px;
+  right:0;
+}
+
+}
