--- a/src/pages/home/Components/Price/Price.css
+++ b/src/pages/home/Components/Price/Price.css
@@ -13,7 +13,6 @@
 .price__items {
   margin-top: 60px;
   display: flex;
-  flex-wrap: wrap;
   gap: 50px;
   align-items: center;
 }
@@ -89,4 +88,16 @@
   position: absolute;
   bottom: 0;
   right: -24px;
+}
+@media (max-width: 1100px) {
+  .price_wrap {
+    padding: 15px 10px 15px 10px;
+    right: -33px;
+  }
+  .price__img {
+    right: -48px;
+  }
+  .price__item_title span {
+    width: 97%;
+  }
 }
