--- a/src/pages/home/Components/Benefits/Benefits.css
+++ b/src/pages/home/Components/Benefits/Benefits.css
@@ -35,3 +35,17 @@
   font-size: 15px;
   width: 82%;
 }
+
+
+@media (max-width: 860px)  {
+.benefits_item img {
+    width: 135px;
+    height: 135px;
+}
+.benefits_points {
+align-items: flex-start;
+}
+.benefits_item p {
+  font-size: 13px;
+}
+}
