--- a/src/components/CustomButton/style.css
+++ b/src/components/CustomButton/style.css
@@ -8,14 +8,29 @@
   color: #fff;
   background-image: linear-gradient(to right, #49b3f7, #864ff1);
   cursor: pointer;
-  
 }
 .btn:hover {
   transform: scale(1.1);
 }
-/* @media (max-width: 910px) {
-  .btn {
+
+.btn__big {
+  width: 250px;
+  height: 55px;
+}
+.btn__medium {
+  width: 180px;
+  height: 48px;
+}
+
+.btn__small {
+  width: 125px;
+  height: 30px;
+}
+
+
+@media (max-width: 951px) {
+  .btn__big {
     width: 240px;
     height: 50px;
   }
-} */
+}
