--- a/src/components/CustomPromo/CustomPromo.css
+++ b/src/components/CustomPromo/CustomPromo.css
@@ -40,9 +40,38 @@
     width: 90%;
   }
 }
-@media (max-width: 1050px) {
+@media (max-width: 960px) {
   .promo_img {
     width: 13%;
     top: 0;
+  }
+}
+@media (max-width: 768px) {
+  .promo {
+    padding: 8px 12px;
+    flex-direction: column;
+    gap: 15px;
+  }
+  .promo_text {
+    font-size: 16px;
+    width: 55%;
+  }
+  .promo_text h3 {
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .promo_text span {
+    width: 120%;
+  }
+  .promo_img {
+    width: 20%;
+  }
+}
+
+@media (max-width: 700px) {
+  .promo_img {
+    width: 22%;
+    top: 29px;
   }
 }
