--- a/src/components/Programma/style.css
+++ b/src/components/Programma/style.css
@@ -23,14 +23,14 @@
 .prog__bg {
   margin: 0 auto;
   width: 95%;
-  background-color: #EFF2FD;
+  background-color: #eff2fd;
   border-radius: 59px;
   padding: 30px 20px;
 }
 .prog_content_top {
   display: flex;
   align-items: flex-start;
-  flex-wrap: wrap;
+
   padding-bottom: 40px;
 }
 .prog_content_top_left {
@@ -121,4 +121,3 @@
   gap: 20px;
   padding: 30px 0;
 }
-
