--- a/src/components/Promo/style.css
+++ b/src/components/Promo/style.css
@@ -4,6 +4,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 90%;
+  padding: 20px 0;
 }
 .promo_container {
   display: flex;
@@ -18,6 +19,7 @@
 .promo__content_btn {
   display: flex;
   gap: 10px;
+  padding: 0 25px;
 }
 .promo__content_base {
   display: flex;
@@ -43,8 +45,7 @@
 @media (max-width: 1050px) {
   .promo__content_title {
     font-size: 50px;
-        line-height: 45px;
-
+    line-height: 45px;
   }
   .promo__right_img {
     max-width: 400px;
@@ -54,4 +55,46 @@
   .promo__right_img {
     max-width: 380px;
   }
+}
+
+@media (max-width: 768px) {
+  .promo_container {
+    flex-direction: column-reverse;
+    gap: 15px;
+  }
+  .promo__content_base {
+    gap: 25px;
+    align-items: center;
+  }
+  .promo__content_title {
+    font-size: 44px;
+    line-height: 41px;
+    text-align: center;
+  }
+  .promo__content_text {
+    font-size: 18px;
+    text-align: center;
+  }
+   .promo__content_base h4 {
+    text-align: center;
+}
+}
+@media (max-width: 710px) {
+  .promo__content {
+    padding: 10px 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .promo__content_title {
+    font-size: 37px;
+    line-height: 35px;
+  }
+  .promo__content_base {
+    gap: 20px;
+  }
+  .promo__content_text {
+    font-size: 15px;
+  }
+ 
 }
