--- a/src/pages/home/Components/Comparison/Comparison.css
+++ b/src/pages/home/Components/Comparison/Comparison.css
@@ -74,3 +74,22 @@
     display: none;
   }
 }
+
+@media (max-width: 480px) {
+  .comparison__content {
+    flex-wrap: wrap;
+  }
+  .comparison h3 {
+    font-size: 26px;
+  }
+}
+
+@media (max-width: 330px) {
+  .comparison h3 {
+    font-size: 21px;
+    text-align: start;
+  }
+  .comparison__content_list {
+    padding: 20px 12px;
+  }
+}
