--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -54,30 +54,74 @@
   justify-content: center;
   gap: 8px;
 }
-
-
-@media (max-width: 860px) {
-.logo {
-  width: 25%;
+.menu_icon {
+  display: none;
+  cursor: pointer;
+}
+.menu_icon img {
+  width: 100%;
 }
 
+.mobile_menu {
+  z-index: 1000;
+  opacity: 0;
+  max-height: 0;
+  transition: opacity 0.3s ease, max-height 0.3s ease;
+}
+
+.mobile_menu.open {
+    display: flex;
+    justify-content: center;
+    opacity: 1;
+    max-height: 300px;
+    background-color: #3f8f8f;
+  
+}
+.mobile_menu_list {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: antiquewhite;
+}
+.mobile_menu_list li {
+  font-family: "Gotham_Pro_medium";
+  font-size: 14px;
+  font-weight: bold;
+  color: #243976;
+  padding: 10px;
+  cursor: pointer;
+}
+.mobile_menu_list li:hover {
+  opacity: 0.8;
+}
+
+@media (max-width: 860px) {
+  .logo {
+    width: 50%;
+  }
 }
 
 @media (max-width: 800px) {
-.header__list {
-  gap: 10px;
-}
-}
-@media (max-width: 710px) {
-.header_info,
-.header__bottom {
-  display: none;
-}
-.head_container {
+  .header__list {
     gap: 10px;
+  }
 }
 
-
+@media (max-width: 710px) {
+  .header_info,
+  .header__bottom {
+    display: none;
+  }
+  .head_container {
+    gap: 10px;
+  }
+  .menu_icon {
+    display: block;
+  }
+  .logo_button_wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
-
-
