--- a/src/components/Promo/style.css
+++ b/src/components/Promo/style.css
@@ -75,9 +75,9 @@
     font-size: 18px;
     text-align: center;
   }
-   .promo__content_base h4 {
+  .promo__content_base h4 {
     text-align: center;
-}
+  }
 }
 @media (max-width: 710px) {
   .promo__content {
@@ -96,5 +96,25 @@
   .promo__content_text {
     font-size: 15px;
   }
- 
+}
+
+@media (max-width: 415px) {
+  .promo__content_title {
+    font-size: 33px;
+    line-height: 33px;
+  }
+    .promo__right_img {
+    max-width: 260px;
+  }
+}
+@media (max-width: 330px) {
+  .promo__content_btn {
+    padding: 0 6px;
+  }
+  .promo__content_text {
+    font-size: 13px;
+  }
+      .promo__content_base h4 {
+        font-size: 14px;
+    }
 }
