--- a/src/components/ReviewSlider/style.css
+++ b/src/components/ReviewSlider/style.css
@@ -37,3 +37,10 @@
   font-family: Gotham_Pro_medium;
   font-size: 12px;
 }
+
+@media (max-width: 350px) {
+.slider_item {
+    width: 416px;
+    height: 160px;
+}
+}
