--- a/src/pages/home/Components/Price/Price.css
+++ b/src/pages/home/Components/Price/Price.css
@@ -133,3 +133,32 @@
     width: 35%;
   }
 }
+
+@media (max-width: 500px) {
+  .price__items {
+    margin-top: 30px;
+  }
+  .price_item {
+    width: 70%;
+  }
+  .price__container h3 {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 330px) {
+  .price__container h3 {
+    font-size: 18px;
+  }
+  .price_wrap {
+    padding: 12px 16px 8px 10px;
+    right: -10px;
+    top: -10px;
+  }
+  .price__img {
+    right: -28px;
+  }
+  .price__item_title span {
+    font-size: 15px;
+  }
+}
