--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -63,44 +63,9 @@
 }
 
 .mobile_menu {
-  z-index: 1000;
-  opacity: 0;
-  max-height: 0;
-  transition: opacity 0.3s ease, max-height 0.3s ease;
+  display: none;
 }
 
-.mobile_menu.open {
-    display: flex;
-    justify-content: center;
-    opacity: 1;
-    max-height: 300px;
-    background-color: #3f8f8f;
-  
-}
-.mobile_menu_list {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background: antiquewhite;
-}
-.mobile_menu_list li {
-  font-family: "Gotham_Pro_medium";
-  font-size: 14px;
-  font-weight: bold;
-  color: #243976;
-  padding: 10px;
-  cursor: pointer;
-}
-.mobile_menu_list li:hover {
-  opacity: 0.8;
-}
-
-@media (max-width: 860px) {
-  .logo {
-    width: 50%;
-  }
-}
 
 @media (max-width: 800px) {
   .header__list {
@@ -123,5 +88,36 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
+  .mobile_menu {
+    z-index: 1000;
+    opacity: 0;
+    max-height: 0;
+    transition: opacity 0.3s ease, max-height 0.3s ease;
+  }
+  .mobile_menu.open {
+    display: flex;
+    justify-content: center;
+    opacity: 1;
+    max-height: 300px;
+    background-color: #3f8f8f;
+  }
+  .mobile_menu_list {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: antiquewhite;
+  }
+  .mobile_menu_list li {
+    font-family: "Gotham_Pro_medium";
+    font-size: 14px;
+    font-weight: bold;
+    color: #243976;
+    padding: 10px;
+    cursor: pointer;
+  }
+  .mobile_menu_list li:hover {
+    opacity: 0.8;
   }
 }
