--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,6 @@
+.head_container.menu-open {
+  background-color: rgba(197, 207, 243, 0.6);
+}
 .head_container {
   display: flex;
   flex-direction: column;
@@ -66,7 +69,6 @@
   display: none;
 }
 
-
 @media (max-width: 800px) {
   .header__list {
     gap: 10px;
@@ -74,6 +76,9 @@
 }
 
 @media (max-width: 710px) {
+  .logo {
+    width: 35%;
+  }
   .header_info,
   .header__bottom {
     display: none;
@@ -100,14 +105,11 @@
     justify-content: center;
     opacity: 1;
     max-height: 300px;
-    background-color: #3f8f8f;
   }
   .mobile_menu_list {
-    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: antiquewhite;
   }
   .mobile_menu_list li {
     font-family: "Gotham_Pro_medium";
