--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,37 +1,49 @@
+header {
+  width: 100%;
+  background-color: #fff;
+}
+
 .head_container.menu-open {
   background-color: rgba(197, 207, 243, 0.6);
 }
+
 .head_container {
   display: flex;
   flex-direction: column;
   gap: 30px;
   padding: 10px 30px;
 }
+
 .logo {
   cursor: pointer;
 }
+
 .header_top {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
 .header_info {
   display: flex;
   align-items: center;
   gap: 29px;
 }
+
 .header_info span {
   font-family: "Gotham_Pro_medium";
   font-size: 20px;
   font-weight: bold;
   color: #243976;
 }
+
 .header__bottom {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .header__list {
   list-style: none;
   display: flex;
@@ -48,25 +60,69 @@
   font-weight: bold;
   color: #243976;
 }
+
 .header__list li:hover {
   opacity: 0.8;
 }
+
 .header_acc {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 8px;
 }
+
 .menu_icon {
   display: none;
   cursor: pointer;
 }
+
 .menu_icon img {
   width: 100%;
 }
 
 .mobile_menu {
   display: none;
+  position: absolute;
+  top: 50;
+  left: 0;
+  width: 100%;
+  height: 0;
+  z-index: 1000;
+  opacity: 0;
+  background-color: rgba(197, 207, 243, 0.6);
+  transition: height 0.3s ease, opacity 0.3s ease;
+}
+
+.mobile_menu.open {
+  top: 100px;
+  opacity: 1;
+  height: 300px;
+}
+
+.mobile_menu_list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  height: 100%;
+  overflow-y: auto;
+}
+
+.mobile_menu_list li {
+  font-family: "Gotham_Pro_medium";
+  font-size: 14px;
+  font-weight: bold;
+  color: #243976;
+  padding: 10px;
+  cursor: pointer;
+  width: 100%;
+  text-align: center;
+}
+
+.mobile_menu_list li:hover {
+  opacity: 0.8;
 }
 
 @media (max-width: 800px) {
@@ -85,6 +141,7 @@
   }
   .head_container {
     gap: 10px;
+    width: 100%;
   }
   .menu_icon {
     display: block;
@@ -95,31 +152,6 @@
     justify-content: space-between;
   }
   .mobile_menu {
-    z-index: 1000;
-    opacity: 0;
-    max-height: 0;
-    transition: opacity 0.3s ease, max-height 0.3s ease;
-  }
-  .mobile_menu.open {
-    display: flex;
-    justify-content: center;
-    opacity: 1;
-    max-height: 300px;
-  }
-  .mobile_menu_list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .mobile_menu_list li {
-    font-family: "Gotham_Pro_medium";
-    font-size: 14px;
-    font-weight: bold;
-    color: #243976;
-    padding: 10px;
-    cursor: pointer;
-  }
-  .mobile_menu_list li:hover {
-    opacity: 0.8;
+    display: block;
   }
 }
