--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@ header {
 }
 
 .head_container.menu-open {
-  background-color: rgba(197, 207, 243, 0.6);
+  background-color: #EFF2FD;
 }
 
 .head_container {
@@ -90,14 +90,14 @@ header {
   height: 0;
   z-index: 1000;
   opacity: 0;
-  background-color: rgba(197, 207, 243, 0.6);
+  background-color: #EFF2FD;
   transition: height 0.3s ease, opacity 0.3s ease;
 }
 
 .mobile_menu.open {
-  top: 100px;
+  top: 118px;
   opacity: 1;
-  height: 300px;
+  height: 60%;
 }
 
 .mobile_menu_list {
